syntax = "proto3";

package livestream.orchestrator.v1;

// service for managing livestreams
service StreamService {
  rpc Subscribe(SubscribeRequest) returns (stream StreamEvent);
}

message SubscribeRequest {
  string stream_id = 1;
}

// stream event
message StreamEvent {
  StreamEventType event_type = 1;
  string stream_id = 2;
  int64 timestamp = 3;
  oneof event_data {
    StreamCreatedData stream_created = 4;
    StreamUpdatedData stream_updated = 5;
    StreamStoppedData stream_stopped = 6;
    ParticipantJoinedData participant_joined = 7;
    ParticipantLeftData participant_left = 8;
  }
}

// stream status
enum StreamStatus {
  STREAM_STATUS_UNKNOWN = 0;
  STREAM_STATUS_CREATING = 1;
  STREAM_STATUS_ACTIVE = 2;
  STREAM_STATUS_STOPPING = 3;
  STREAM_STATUS_STOPPED = 4;
  STREAM_STATUS_ERROR = 5;
}

// event type enum
enum StreamEventType {
  STREAM_EVENT_TYPE_UNKNOWN = 0;
  STREAM_EVENT_TYPE_STREAM_CREATED = 1;
  STREAM_EVENT_TYPE_STREAM_UPDATED = 2;
  STREAM_EVENT_TYPE_STREAM_STOPPED = 3;
  STREAM_EVENT_TYPE_PARTICIPANT_JOINED = 4;
  STREAM_EVENT_TYPE_PARTICIPANT_LEFT = 5;
}

// participant message
message Participant {
  string id = 1;
  string identity = 2;
  int64 joined_at = 3; // unix timestamp in milliseconds
  int64 left_at = 4; // unix timestamp in milliseconds (optional)
  map<string, string> metadata = 5;
}

// event data types
message StreamCreatedData {
  string room_name = 1;
  map<string, string> metadata = 2;
}

message StreamUpdatedData {
  StreamStatus previous_status = 1;
  StreamStatus current_status = 2;
  map<string, string> metadata = 3;
}

message StreamStoppedData {
  string room_name = 1;
}

message ParticipantJoinedData {
  Participant participant = 1;
}

message ParticipantLeftData {
  Participant participant = 1;
}

